# cli_colors

./: README.md  setup.cfg  setup.py
cli_colors/: colors.py  test_colors.py
