[metadata]
# replace with your username:
name = cli_colors-sudo-Smiley
version = 0.0.1
author = sudo-Smiley
description = A light library for coloring terminal output
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudo-Smiley/cli_colors
project_urls =
    Bug Tracker =  https://github.com/sudo-Smiley/cli_colors/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src